fix navbar on small sizes

--- a/styles/style.css
+++ b/styles/style.css
@@ -307,7 +307,7 @@ footer p i {
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 950px) {
   .nav-bar a:not(:first-child) {
     display: none;
   }
